Fixed ChoosePublicKeyDialogFragment UI.| #601

--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -401,4 +401,5 @@
     <string name="report_problem">Report problem</string>
     <string name="not_available_check_imap_settings">Not available. Please check your account IMAP
         settings</string>
+    <string name="choose_public_key_to_share">Choose Public Key to share</string>
 </resources>
