Added an option to attach a public key when sending a message.| #479

--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -213,8 +213,6 @@
     <string name="key_successfully_copied">Key successfully copied</string>
     <string name="search">Search</string>
     <string name="have_not_any_other_key">I don\'t have any other key</string>
-    <string name="tell_sender_to_update_their_settings">You should tell the sender to update their settings and send a
-        new message.</string>
     <string name="message_was_encrypted_for_wrong_key">Hello,\n\nI was not able to read your encrypted message because
         it was encrypted for a wrong key.\n\nMy current public key is attached below. Please update your records and
         send me a new encrypted message.\n\nThank you</string>
@@ -402,4 +400,15 @@
     <string name="not_available_check_imap_settings">Not available. Please check your account IMAP
         settings</string>
     <string name="choose_public_key_to_share">Choose Public Key to share</string>
+    <string name="include_public_key">Include Public Key</string>
+    <plurals name="tell_sender_to_update_their_settings">
+        <item quantity="one">You should tell the sender to update their settings and send a
+        new message.</item>
+        <item quantity="other">You should tell the sender to update their settings and send a
+        new message.\n\nChoose Public Key to share</item>
+    </plurals>
+    <plurals name="choose_pub_key">
+        <item quantity="one">Your public key is ready to be added</item>
+        <item quantity="other">Choose Public Keys to share</item>
+    </plurals>
 </resources>
