Created PublicKeyDetailsFragment. Refactored code to use fragments instead of an activity.| #522

--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -411,4 +411,5 @@
         <item quantity="one">Your public key is ready to be added</item>
         <item quantity="other">Choose Public Keys to share</item>
     </plurals>
+    <string name="contact_pub_key">Contact (Public Key)</string>
 </resources>
