Added account/get API. Refactored code.| #754

--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -414,4 +414,7 @@
     <string name="your_email_address">Your email address</string>
     <string name="pending">Pending&#8230;</string>
     <string name="mark_unread">Mark unread</string>
+    <string name="user_not_registered">User not registered</string>
+    <string name="user_not_verified">User not verified</string>
+    <string name="user_not_registered_not_verified">User not registered and not verified</string>
 </resources>
