--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -255,8 +255,8 @@
     <string name="network_error_please_retry">Network error, please retry</string>
     <string name="setup_app">Please set up the app before use this option</string>
     <plurals name="not_recovered_all_keys">
-        <item quantity="one">%1$d of %2$d keys successfully imported. There is 1 key left. Try a different pass phrase to unlock all keys.</item>
-        <item quantity="other">%1$d of %2$d keys successfully imported. There are %3$d key left. Try a different pass phrase to unlock all keys.</item>
+        <item quantity="one">%1$d of %2$d keys successfully unlocked. There is 1 key left. Try a different pass phrase to unlock all keys.</item>
+        <item quantity="other">%1$d of %2$d keys successfully unlocked. There are %3$d key left. Try a different pass phrase to unlock all keys.</item>
     </plurals>
     <string name="cannot_send_attachment_without_read_permission">Permission to read external storage is needed to send the attachment.</string>
     <string name="hint_when_found_keys_in_email">FlowCrypt found one or more backups of your account key(s).\n\nKey backups are encrypted for your protection. This makes them useless without your pass phrase.\n\nPlease enter pass phrase(s) that you used when the backup was made.</string>
