Changed the action mode title for selection.| #795

--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -423,4 +423,5 @@
     <string name="access_was_not_granted">Access was not granted</string>
     <string name="can_not_send_due_to_auth_failure">Can\'t send message: auth failure</string>
     <string name="mark_read">Mark read</string>
+    <string name="selection_text">Selected: %1$d</string>
 </resources>
