--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -417,4 +417,5 @@
     <string name="selection_text">Selected: %1$d</string>
     <string name="marked_for_archiving">Marked for archiving</string>
     <string name="undo">Undo</string>
+    <string name="choose_email">Choose email</string>
 </resources>
