--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -434,4 +434,7 @@
     <string name="missing_pass_phrase_strength_evalutaion">Unexpectedly missing pass phrase strength evaluation</string>
     <string name="empty_pass_phrase">Empty pass phrase</string>
     <string name="keys_have_different_pass_phrase">The keys have different pass phrase</string>
+    <string name="contact_for_saving_not_found">Contact for saving is not found</string>
+    <string name="contact_for_updating_is_not_found">Contact for updating is not found</string>
+    <string name="contact_for_replacing_is_not_found">Contact for replacing is not found</string>
 </resources>
