--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -437,4 +437,5 @@
     <string name="contact_for_saving_not_found">Contact for saving is not found</string>
     <string name="contact_for_updating_is_not_found">Contact for updating is not found</string>
     <string name="contact_for_replacing_is_not_found">Contact for replacing is not found</string>
+    <string name="error_could_not_save_private_keys">Error: couldn\'t save private keys</string>
 </resources>
