Improved behavior of the app if we failed to save a copy of already sent message.| Close #909

--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -428,4 +428,5 @@
     <string name="error_could_not_save_private_keys">Error: couldn\'t save private keys</string>
     <string name="show_more">Show more</string>
     <string name="delete_quoted_text">Delete quoted text</string>
+    <string name="cannot_save_copy_in_sent_folder">Cannot save a copy in SENT folder</string>
 </resources>
