--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -323,7 +323,7 @@
     <string name="could_not_create_no_key_available">Could not create: no key available</string>
     <string name="message_failed_to_forward">Message failed to send. Please forward the message again</string>
     <string name="there_is_problem_with_cache">There is a problem with a temp cache directory. Please create the message again</string>
-    <string name="error_happened_during_creation">Sorry, we could not create a message. Please write %1$s for help.</string>
+    <string name="error_happened_during_creation">Sorry, we could not create a message. Please write %1$s for help.\n\nDetails:%2$s</string>
     <string name="sent">Sent</string>
     <string name="an_error_has_occurred">An error has occurred</string>
     <string name="outgoing">Outgoing</string>
@@ -430,4 +430,6 @@
     <string name="delete_quoted_text">Delete quoted text</string>
     <string name="cannot_save_copy_in_sent_folder">Cannot save a copy in SENT folder</string>
     <string name="outbox_msgs_count">%1$d unsent in Outbox</string>
+    <string name="delete_message">Delete message</string>
+    <string name="write_us">Write us</string>
 </resources>
