--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -363,6 +363,7 @@
     <string name="errors_notifications">Errors notifications</string>
     <string name="system_notifications_notification_chanel">The system notifications channel</string>
     <string name="errors_notifications_notification_chanel">The errors notifications channel with high priority</string>
+    <string name="sync_notifications_notification_chanel">The sync notifications channel</string>
     <string name="warning_passphrase_is_too_weak">Your private key pass phrase is too weak. Please change it in the
         settings.</string>
     <string name="please_type_key_id_or_email">Please type key id or email</string>
@@ -436,6 +437,8 @@
     <string name="write_us">Write us</string>
     <string name="message_details_unavailable">Message details unavailable</string>
     <string name="message_failed_to_create">The message failed to create. Please create the message again</string>
+    <string name="sync">Sync</string>
+    <string name="sending_email">Sending email&#8230;</string>
     <plurals name="has_failed_outgoing_msgs">
         <item quantity="one">You have an outgoing message which can not be sent</item>
         <item quantity="other">You have %1$d outgoing messages which can not be sent</item>
