--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -432,10 +432,9 @@
     <string name="show_more">Show more</string>
     <string name="delete_quoted_text">Delete quoted text</string>
     <string name="cannot_save_copy_in_sent_folder">Cannot save a copy in SENT folder</string>
-    <string name="outbox_msgs_count">Outbox: %1$d unsent</string>
+    <string name="outbox_msgs_count" tools:ignore="PluralsCandidate">Outbox: %1$d unsent</string>
     <string name="delete_message">Delete message</string>
     <string name="write_us">Write us</string>
-    <string name="message_details_unavailable">Message details unavailable</string>
     <string name="message_failed_to_create">The message failed to create. Please create the message again</string>
     <string name="sync">Sync</string>
     <string name="sending_email">Sending email&#8230;</string>
