--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -439,12 +439,12 @@
     <string name="sync">Sync</string>
     <string name="sending_email">Sending email&#8230;</string>
     <string name="restart_sending">Restart sending</string>
-    <string name="restart_sending_process_warning">You are going to restart a sending process. Usually, you don\'t need to do it. It should be the last resort if you think that the app can\'t send a message normally. Would you like to continue?</string>
+    <string name="restart_sending_process_warning">This will retry sending the message. Would you like to continue?</string>
     <string name="empty_trash">Empty trash</string>
     <string name="empty_trash_warning">You are about to permanently delete all messages in this folder. Are you sure?</string>
     <plurals name="has_failed_outgoing_msgs">
-        <item quantity="one">You have an outgoing message which can not be sent</item>
-        <item quantity="other">You have %1$d outgoing messages which can not be sent</item>
+        <item quantity="one">You have an outgoing message which could not be sent</item>
+        <item quantity="other">You have %1$d outgoing messages which could not be sent</item>
     </plurals>
     <plurals name="delete_msg_question">
         <item quantity="one">Delete this message permanently?</item>
