--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -452,4 +452,10 @@
     </plurals>
     <string name="emptying_trash_failed">Emptying trash failed!</string>
     <string name="processing">Processing&#8230;</string>
+    <string name="connect_your_email_account_using_oauth_2_0">Connect your email account\n using OAuth 2.0</string>
+    <string name="or_use_your_credentials_to_connect">or use your credentials to connect</string>
+    <string name="advanced_settings">Advanced settings</string>
+    <string name="connection">Connecting&#8230;</string>
+    <string name="checking_imap_settings">Checking IMAP setting&#8230;</string>
+    <string name="checking_smtp_settings">Checking SMTP setting&#8230;</string>
 </resources>
