Changed a notification about wrong IMAP/SMTP settings.| #918

--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -466,4 +466,5 @@
         <item quantity="other">Found %1$d folders</item>
     </plurals>
     <string name="searching_in_folders" tools:ignore="PluralsCandidate">Searching for backups in folder %1$d/%2$d</string>
+    <string name="show_error_msg_with_recommendations">%1$s\n\nPlease check your credentials or use advanced settings to connect</string>
 </resources>
