Added an ability to show a provider FAQ. Refactored code.| #918

--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -467,4 +467,5 @@
     </plurals>
     <string name="searching_in_folders" tools:ignore="PluralsCandidate">Searching for backups in folder %1$d/%2$d</string>
     <string name="show_error_msg_with_recommendations">%1$s\n\nPlease check your credentials or use advanced settings to connect</string>
+    <string name="provider_faq">\n\nThe provider FAQ: %1$s</string>
 </resources>
