--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -448,7 +448,7 @@
     </plurals>
     <string name="emptying_trash_failed">Emptying trash failed!</string>
     <string name="processing">Processing&#8230;</string>
-    <string name="or_use_your_credentials_to_connect">Use your credentials to connect</string>
+    <string name="or_use_your_credentials_to_connect">or use your credentials to connect</string>
     <string name="advanced_settings">Advanced settings</string>
     <string name="connection">Connecting&#8230;</string>
     <string name="checking_imap_settings">Checking IMAP settings&#8230;</string>
@@ -463,4 +463,6 @@
     <string name="searching_in_folders" tools:ignore="PluralsCandidate">Searching for backups in folder %1$d/%2$d</string>
     <string name="show_error_msg_with_recommendations">%1$s\n\nPlease check your credentials or use advanced settings to connect</string>
     <string name="provider_faq">\n\nThe provider FAQ: %1$s</string>
+    <string name="connect_your_email_account_using_oauth_2_0">Connect your email account\n using OAuth 2.0</string>
+    <string name="continue_with_outlook_hotmail">Continue with Outlook, Hotmail</string>
 </resources>
