Added a temp version which works with Microsoft OAuth 2.0.| #716

--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -465,4 +465,5 @@
     <string name="provider_faq">\n\nThe provider FAQ: %1$s</string>
     <string name="connect_your_email_account_using_oauth_2_0">Connect your email account\n using OAuth 2.0</string>
     <string name="continue_with_outlook_hotmail">Continue with Outlook, Hotmail</string>
+    <string name="loading_account_details">Loading the account details &#8230;</string>
 </resources>
