--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -470,4 +470,5 @@
     <string name="error_with_value">Error: %1$s</string>
     <string name="oauth_error">OAuth error</string>
     <string name="loading_oauth_server_configuration">Loading OAuth server configuration&#8230;</string>
+    <string name="open_side_menu_and_do_logout">Please open the side menu and do logout to remove %1$s</string>
 </resources>
