Added an ability to delete a private key from the key details screen.| #920

--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -326,7 +326,7 @@
     <string name="outgoing">Outgoing</string>
     <string name="cannot_send_message_unknown_error">Can\'t send message: unknown error</string>
     <string name="message_failed_to_send">Message failed to send: unknown error\n\n%1$s</string>
-    <string name="my_public_key">My Public Key</string>
+    <string name="key_details">Key details</string>
     <string name="public_key_below_is_safe_to_share">Public Keys are safe to share</string>
     <string name="show_public_key">Show public key</string>
     <string name="copy_to_clipboard">Copy to clipboard</string>
@@ -492,4 +492,9 @@
     <string name="add_new_contact">Add a new contact</string>
     <string name="add_new_private_key">Add a new private key</string>
     <string name="could_not_add_new_account">Couldn\'t add a new account</string>
+    <string name="please_leave_at_least_one_key">You can\'t delete all keys. Please leave at least one key available for encryption/decryption purposes</string>
+    <plurals name="delete_key_question">
+        <item quantity="one">Delete this key permanently?</item>
+        <item quantity="other">Delete these %1$d keys permanently?</item>
+    </plurals>
 </resources>
