--- a/FlowCrypt/src/main/res/values/strings.xml
+++ b/FlowCrypt/src/main/res/values/strings.xml
@@ -501,4 +501,5 @@
     <string name="auth_failure">Authentication failure</string>
     <string name="auth_failure_hint">Failed to log-in, please, check your account name and password in the server settings.</string>
     <string name="connection_lost">Connection lost</string>
+    <string name="loading_labels">Loading labels</string>
 </resources>
